# wordle-rs

./: Cargo.toml  README.md
