[package]
name = "wordle-rs"
version = "0.0.1"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2021"
description = "A simple Wordle puzzle solver written in Rust"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
